# hardcorevisor

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  README.md  commitlint.config.js  hcv.example.yaml  justfile
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  kvm-e2e.yml  (+2 more)
controller/: .golangci.yml  go.mod  go.sum
debian/: changelog  control  copyright  hardcorevisor.service  rules
deploy/: .env.example  Dockerfile.controller  alert-rules.yml  alertmanager.yml  docker-compose.prod.yml  docker-compose.yml  hcv-production.yaml  loki-config.yaml  prometheus.yml
docs/: openapi.yaml
hcvtui/: Cargo.toml
hcvtui/src/: api_client.rs  app.rs  keybindings.rs  main.rs
hcvtui/src/ui/: dashboard.rs  ha_monitor.rs  log_viewer.rs  mod.rs  network_view.rs  storage_view.rs  vm_manager.rs
proto/: compute.proto  peripheral.proto  storage.proto
scripts/: build-deb.sh  demo.sh  deploy-production.sh  fix-build.sh  gen-manpages.sh  gen-tls-certs.sh  io-bench.sh  load-test.sh  openapi-gen.sh  proto-check.sh  proto-gen.sh  quick-check.sh  run-e2e.sh  setup-branch-protection.sh  setup-dev.sh  stack-smoke-test.sh
vmcore/: Cargo.toml  build.rs  cbindgen.toml
vmcore/benches/: vmcore_bench.rs
vmcore/src/: event_ring.rs  io_engine.rs  kvm_boot.rs  kvm_loader.rs  kvm_mgr.rs  kvm_sys.rs  lib.rs  memory_mgr.rs  panic_barrier.rs  tap_device.rs  vcpu_mgr.rs  virtio_blk.rs  virtio_blk_io.rs  virtio_net.rs  virtio_split_queue.rs
webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+162 files in other folders)
