[workspace]
resolver = "2"
members = ["vmcore", "hcvtui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HardCoreVisor Team"]
license = "AGPL-3.0"
repository = "https://github.com/HardcoreMonk/hardcorevisor"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
thiserror = "2"
